upload changes to swagger.yaml file; customers fully funcitional, mechanics half way done
