# app/blueprints/customers/routes.py
@@ -72,14 +72,14 @@ def get_all_customers():
         return customers_schema.jsonify(customers), 200
 
 
-# GET SPECIFIC CUSTOMER
-@customers_bp.route("/<int:customer_id>", methods=["GET"])
-def get_customer(customer_id):
-    customer = db.session.get(Customer, customer_id)
+# # GET SPECIFIC CUSTOMER
+# @customers_bp.route("/<int:customer_id>", methods=["GET"])
+# def get_customer(customer_id):
+#     customer = db.session.get(Customer, customer_id)
 
-    if customer:
-        return customer_schema.jsonify(customer), 200
-    return jsonify({"error": "Customer not found"}), 404
+#     if customer:
+#         return customer_schema.jsonify(customer), 200
+#     return jsonify({"error": "Customer not found"}), 404
 
 
 # UPDATE CUSTOMER
